Fix Dockerfile for Render deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,32 +1,24 @@
-# Base image
 FROM php:8.2-cli
-
-# Set working directory
-WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    git \
-    unzip \
-    libzip-dev \
-    zip \
-    curl \
-    && docker-php-ext-install zip pdo pdo_mysql
+    git unzip libzip-dev \
+    && docker-php-ext-install zip
 
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-# Copy project files
+# Set working directory
+WORKDIR /app
+
+# Copy Laravel files
 COPY . .
 
 # Install PHP dependencies
 RUN composer install --no-dev --optimize-autoloader
 
-# Generate app key if not exists
-RUN php artisan key:generate || true
-
-# Expose port (Render uses 10000)
+# Expose Render port
 EXPOSE 10000
 
-# Start Laravel server
+# Start Laravel
 CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=10000"]
