Fix Dockerfile path for Render deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,24 +1,23 @@
 FROM php:8.2-cli
 
-# Install system dependencies
+WORKDIR /var/www
+
 RUN apt-get update && apt-get install -y \
-    git unzip libzip-dev \
+    unzip \
+    git \
+    curl \
+    libzip-dev \
+    zip \
     && docker-php-ext-install zip
 
-# Install Composer
-COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
-
-# Set working directory
-WORKDIR /app
-
-# Copy Laravel files
-COPY . .
-
-# Install PHP dependencies
+COPY composer.json composer.lock ./
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 RUN composer install --no-dev --optimize-autoloader
 
-# Expose Render port
+COPY . .
+
+RUN php artisan key:generate || true
+
 EXPOSE 10000
 
-# Start Laravel
 CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=10000"]
