--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,24 @@
 FROM php:8.2-cli
 
-WORKDIR /var/www
+WORKDIR /app
 
 RUN apt-get update && apt-get install -y \
-    unzip \
     git \
-    curl \
+    unzip \
     libzip-dev \
-    zip \
     && docker-php-ext-install zip
 
-COPY composer.json composer.lock ./
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-RUN composer install --no-dev --optimize-autoloader
-
 COPY . .
+
+RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
+ && php composer-setup.php \
+ && php -r "unlink('composer-setup.php');" \
+ && mv composer.phar /usr/local/bin/composer
+
+RUN composer install --no-dev --optimize-autoloader || true
 
 RUN php artisan key:generate || true
 
 EXPOSE 10000
 
-CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=10000"]
+CMD php artisan serve --host=0.0.0.0 --port=10000
